--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
           <h1>Powerful Digital Solutions With GP<span>.</span></h1>
-          <h2>FAI Marketing Inc. Powerful Digital Marketing Solutions Company!</h2>
+          <h2>Love's Web Firm. Powerful Digital Marketing Solutions Company!</h2>
         </div>
       </div>
 
@@ -133,7 +133,7 @@
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h3>Marketing & Campaigning Never Been So Easy & Fun!</h3>
             <p class="font-italic">
-              You already know what you need & want. And so do we! Here at <strong>FAI Marketing Inc.</strong> our passion and drive
+              You already know what you need & want. And so do we! Here at <strong>Love's Web Firm</strong> our passion and drive
               is fueled by your companies Determination & Drive!
             </p>
             <ul>
@@ -143,7 +143,7 @@
             </ul>
             <p>
               What are you waiting for? Come get your company online right now, and in the hands of your clients tomorrow! Get ahead of your
-              competition with <strong><i><u>FAI Marketing Inc.</u></i></strong>!
+              competition with <strong><i><u>Love's Web Firm</u></i></strong>!
             </p>
           </div>
         </div>
@@ -271,8 +271,8 @@
 
         <div class="text-center">
           <h3>Call To Action</h3>
-          <p> Contact <strong><a href="https://www.fai.marketing" target="_blank" style="color: #0F0; text-shadow: 7px 7px 14px #C0C0C0; font-size: 20px;">FAI Marketing Inc.</a></strong> today to get your company working Tomorrow!</p>
-          <a class="cta-btn" href="https://www.fai.marketing">View our Site!</a>
+          <p> Contact <strong><a href="https://www.loveswebfirm.com" target="_blank" style="color: #0F0; text-shadow: 7px 7px 14px #C0C0C0; font-size: 20px;">Love's Web Firm</a></strong> today to get your company working Tomorrow!</p>
+          <a class="cta-btn" href="https://www.loveswebfirm.com">View our Site!</a>
         </div>
 
       </div>
@@ -495,7 +495,7 @@
             <h4>Ceo &amp; Founder</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                <strong>FAI Marketing Inc.</strong> Truely opened up my eyes to where my company was failing. Even better, they helped resolve the issue!
+                <strong>Love's Web Firm</strong> Truely opened up my eyes to where my company was failing. Even better, they helped resolve the issue!
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
@@ -506,7 +506,7 @@
             <h4>Designer</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                I was in need of some assistance with a very picky client. <strong>FAI Marketing Inc.</strong> Really stepped up and helped out!
+                I was in need of some assistance with a very picky client. <strong>Love's Web Firm</strong> Really stepped up and helped out!
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
@@ -517,7 +517,7 @@
             <h4>Store Owner</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                When I opened my store, I thought I was done! But <strong>FAI Marketing</strong> Proved me wrong! Now I have more than I ever dreamed about having!
+                When I opened my store, I thought I was done! But <strong>Love's Web Firm</strong> Proved me wrong! Now I have more than I ever dreamed about having!
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
@@ -528,7 +528,7 @@
             <h4>Freelancer</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                I needed a website for my services, but I did not know I needed other things as well! <strong>FAI Marketing Inc.</strong> Truely stepped up their game and gave me what my clients needed!
+                I needed a website for my services, but I did not know I needed other things as well! <strong>Love's Web Firm</strong> Truely stepped up their game and gave me what my clients needed!
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
@@ -539,7 +539,7 @@
             <h4>Entrepreneur</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                I know how to start business and keep them running. With <strong>FAI Marketing Inc.</strong> I can easily call them up and they can help with my Marketing & Website needs!
+                I know how to start business and keep them running. With <strong>Love's Web Firm</strong> I can easily call them up and they can help with my Marketing & Website needs!
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
@@ -663,7 +663,7 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@fai.marketing</p>
+                <p>aubrey@loveswebfirm.com</p>
               </div>
 
               <div class="phone">
@@ -727,7 +727,7 @@
                 404 Coder BLVD <br>
                 Fort Worth, TX 76067<br><br>
                 <strong>Phone:</strong> +1 817 555 0505<br>
-                <strong>Email:</strong> info@fai.marketing<br>
+                <strong>Email:</strong> aubrey@loveswebfirm.com<br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -779,7 +779,7 @@
         &copy; Copyright <strong><span>GP</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="https://fai.marketing/">FAI Marketing Inc. { C0d3 N3rd }</a>
+        Designed by <a href="https://www.loveswebfirm.com">Love's Web Firm { C0d3 N3rd }</a>
       </div>
     </div>
   </footer><!-- End Footer -->
